Readersourcing notebook update

--- a/notebooks/Readersourcing.ipynb
+++ b/notebooks/Readersourcing.ipynb
@@ -104,13 +104,17 @@
     "import json\n",
     "import time\n",
     "\n",
+    "# Parameter setting\n",
+    "\n",
+    "dataset_name = \"seed_2/p_4_beta_big\"\n",
+    "days = 180\n",
+    "\n",
     "# Reader score must be set to a very small value otherwise there will be a division by 0\n",
     "\n",
     "epsilon = 0.000001\n",
     "\n",
     "# CSV file parsing\n",
     "\n",
-    "dataset_name = \"seed_2/p_4_beta_big\"\n",
     "dataset_folder_path = \"../data/{}/\".format(dataset_name)\n",
     "info_filename = \"{}info.csv\".format(dataset_folder_path)\n",
     "ratings_filename = \"{}ratings.csv\".format(dataset_folder_path)\n",
@@ -130,7 +134,7 @@
     "papers_number = info[\"Paper\"][0]\n",
     "readers_number = info[\"Reader\"][0]\n",
     "ratings_number = info[\"Rating\"][0]\n",
-    "ratings_number_per_day = int(ratings_number / 180)\n",
+    "ratings_number_per_day = m.floor(int(ratings_number / days))\n",
     "authors_number = info[\"Author\"][0]\n",
     "papers = np.arange(papers_number)\n",
     "readers = np.arange(readers_number)\n",
