Notebook and data update.

--- a/notebooks/Seeder.ipynb
+++ b/notebooks/Seeder.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
      "text": [
-      "DATASET NAME:  sample\nDATASET FOLDER PATH:  ../data/sample/\nINFO FILE PATH:  ../data/sample/info.csv\nRATINGS FILE PATH:  ../data/sample/ratings.csv\nAUTHORS FILE PATH:  ../data/sample/authors.csv\n"
+      "DATASET NAME:  sample_days\nDATASET FOLDER PATH:  ../data/sample_days/\nINFO FILE PATH:  ../data/sample_days/info.csv\nRATINGS FILE PATH:  ../data/sample_days/ratings.csv\nAUTHORS FILE PATH:  ../data/sample_days/authors.csv\n"
      ],
      "output_type": "stream"
     }
@@ -28,7 +28,7 @@
     "\n",
     "# Parameter setting\n",
     "\n",
-    "dataset_name = \"sample\"\n",
+    "dataset_name = \"sample_days\"\n",
     "papers_number = 300\n",
     "readers_number = 150\n",
     "authors_number = 25\n",
@@ -76,12 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
      "text": [
-      "---------- PAPER DISTRIBUTIONS GENERATION STARTED ----------\n0/300 (0/100%)\n30/300 (10/100%)\n60/300 (20/100%)\n90/300 (30/100%)\n120/300 (40/100%)\n150/300 (50/100%)\n180/300 (60/100%)\n210/300 (70/100%)\n240/300 (80/100%)\n270/300 (90/100%)\n300/300 (100/100%)\n---------- PAPER DISTRIBUTIONS GENERATION COMPLETED ----------\n"
+      "---------- PAPER DISTRIBUTIONS GENERATION STARTED ----------",
+      "\n0/300 (0/100%)\n30/300 (10/100%)\n60/300 (20/100%)\n90/300 (30/100%)\n120/300 (40/100%)\n150/300 (50/100%)\n180/300 (60/100%)\n210/300 (70/100%)\n240/300 (80/100%)\n270/300 (90/100%)\n300/300 (100/100%)\n---------- PAPER DISTRIBUTIONS GENERATION COMPLETED ----------\n"
      ],
      "output_type": "stream"
     }
@@ -113,18 +114,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "text": [
-      "---------- READERS SETS GENERATION STARTED ----------\nSET 0:  [129, 101, 111, 42, 47, 143, 98, 51, 32, 3, 38, 135, 126, 112, 102, 115, 91, 87, 48, 7, 99, 35, 58, 83, 62, 138, 141, 104, 133, 89]\nSET 1:  [39, 60, 88, 74, 16, 67, 40, 108, 13, 0, 86, 33, 85, 10, 71, 1, 6, 109, 53, 52, 31, 18, 95, 59, 19, 29, 130, 110, 14, 61]\nSET 2:  [106, 81, 54, 73, 92, 134, 131, 30, 64, 43, 127, 9, 20, 17, 78, 55, 105, 44, 149, 50, 21, 113, 139, 117, 28, 118, 4, 136, 23, 66]\nSET 3:  [77, 107, 124, 137, 2, 100, 142, 65, 114, 148, 144, 27, 69, 103, 97, 128, 82, 76, 63, 45, 41, 8, 140, 15, 146, 37, 94, 26, 79, 84]\nSET 4:  [147, 75, 90, 72, 123, 96, 24, 11, 70, 36, 56, 93, 46, 5, 12, 57, 122, 125, 34, 49, 25, 68, 121, 132, 80, 22, 120, 116, 145, 119]\n---------- READERS SETS GENERATION COMPLETED ----------\n---------- RATINGS GENERATION STARTED ----------\n",
-      "0/4020 (0/100%)",
-      "\n402/4020 (10/100%)\n",
-      "804/4020 (20/100%)\n1206/4020 (30/100%)\n",
-      "1608/4020 (40/100%)\n2010/4020 (50/100%)\n2412/4020 (60/100%)\n2814/4020 (70/100%)\n",
-      "3216/4020 (80/100%)\n3618/4020 (90/100%)\n",
-      "4020/4020 (100/100%)\n---------- RATINGS GENERATION ENDED ----------\n"
+      "---------- READERS SETS GENERATION STARTED ----------\nSET 0:  [148, 67, 0, 84, 29, 90, 93, 38, 143, 76, 98, 31, 23, 89, 112, 129, 126, 66, 113, 132, 107, 106, 87, 20, 10, 71, 140, 63, 101, 69]\nSET 1:  [58, 80, 109, 136, 130, 3, 96, 61, 62, 70, 36, 7, 145, 91, 25, 35, 24, 74, 43, 117, 79, 15, 5, 131, 8, 14, 59, 37, 86, 88]\nSET 2:  [119, 11, 65, 52, 45, 95, 2, 85, 46, 116, 6, 144, 124, 83, 56, 123, 139, 48, 19, 103, 111, 120, 134, 137, 57, 133, 40, 49, 64, 16]\nSET 3:  [4, 100, 18, 75, 32, 50, 110, 30, 82, 105, 99, 47, 77, 13, 97, 53, 122, 149, 81, 26, 102, 78, 39, 115, 142, 127, 104, 73, 94, 118]\nSET 4:  [51, 17, 1, 128, 12, 22, 21, 121, 92, 9, 60, 34, 44, 54, 146, 72, 55, 33, 68, 114, 141, 138, 28, 125, 41, 147, 108, 27, 42, 135]\n---------- READERS SETS GENERATION COMPLETED ----------\n---------- RATINGS GENERATION STARTED ----------\n0/4020 (0/100%)\n402/4020 (10/100%)\n804/4020 (20/100%)",
+      "\n1206/4020 (30/100%)\n1608/4020 (40/100%)\n2010/4020 (50/100%)\n2412/4020 (60/100%)\n2814/4020 (70/100%)\n3216/4020 (80/100%)\n3618/4020 (90/100%)\n4020/4020 (100/100%)\n---------- RATINGS GENERATION ENDED ----------",
+      "\n"
      ],
      "output_type": "stream"
     }
@@ -192,14 +189,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
      "text": [
-      "---------- AUTHORS GENERATION STARTED ----------\n",
-      "0/25 (0/100%)",
-      "\n5/25 (20/100%)\n10/25 (40/100%)\n15/25 (60/100%)\n20/25 (80/100%)\n25/25 (100/100%)\n---------- AUTHORS GENERATION ENDED ----------\n"
+      "---------- AUTHORS GENERATION STARTED ----------\n0/25 (0/100%)\n5/25 (20/100%)\n10/25 (40/100%)\n15/25 (60/100%)\n20/25 (80/100%)\n25/25 (100/100%)\n---------- AUTHORS GENERATION ENDED ----------",
+      "\n"
      ],
      "output_type": "stream"
     }
@@ -240,12 +236,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
      "text": [
-      "---------- INFO GENERATION STARTED ----------\n---------- INFO GENERATION ENDED ----------\n"
+      "---------- INFO GENERATION STARTED ----------\n---------- INFO GENERATION ENDED ----------",
+      "\n"
      ],
      "output_type": "stream"
     }
@@ -279,15 +276,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
      "text": [
       "---------- STATS GENERATION STARTED ----------\n",
       "---------- COMPUTING STATS FOR PAPERS ----------",
-      "\n---------- COMPUTING STATS FOR READERS ----------\n",
-      "---------- STATS GENERATION COMPLETED ----------\n"
+      "\n---------- COMPUTING STATS FOR READERS ----------\n---------- STATS GENERATION COMPLETED ----------\n"
      ],
      "output_type": "stream"
     },
@@ -376,12 +372,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
      "text": [
-      "MAX NUMBER OF RATINGS FOR A PAPER:  4020\nMIN NUMBER OF RATINGS FOR A PAPER:  4012\nMEAN NUMBER OF RATINGS FOR A PAPER:  4016\nNUMBER OF PAPERS WITH UNIQUE RATING:  0\nMAX NUMBER OF RATINGS FOR A READER:  4\nMIN NUMBER OF RATINGS FOR A READER:  0\nMEAN NUMBER OF RATINGS FOR A READER:  3\nNUMBER OF READERS WITH UNIQUE RATING:  0\n"
+      "MAX NUMBER OF RATINGS FOR A PAPER:  4020\nMIN NUMBER OF RATINGS FOR A PAPER:  4010\nMEAN NUMBER OF RATINGS FOR A PAPER:  4016\nNUMBER OF PAPERS WITH UNIQUE RATING:  0\nMAX NUMBER OF RATINGS FOR A READER:  4\nMIN NUMBER OF RATINGS FOR A READER:  0\nMEAN NUMBER OF RATINGS FOR A READER:  3\nNUMBER OF READERS WITH UNIQUE RATING:  0\n"
      ],
      "output_type": "stream"
     }
