Seeder notebook with beta distribution restored

--- a/notebooks/Seeder.ipynb
+++ b/notebooks/Seeder.ipynb
@@ -89,19 +89,48 @@
    ],
    "source": [
     "\n",
-    "# Papers distribution generation\n",
+    "# Papers distribution generation with beta distribution\n",
     "\n",
     "print(\"---------- PAPER DISTRIBUTIONS GENERATION STARTED ----------\")\n",
     "\n",
-    "paper_distributions = np.empty(papers_number)\n",
-    "for index in range(0, papers_number):\n",
-    "    percentage = 100*index/papers_number\n",
-    "    if percentage % 10 == 0:\n",
-    "        print(f\"{int(index)}/{papers_number} ({int(percentage)}/100%)\")\n",
-    "    distribution = tn(0, 1, loc=rn.uniform(0, 1), scale=rn.uniform(0, 0.05)).rvs(1)\n",
-    "    paper_distributions[index] = distribution\n",
+    "# CASE 1: a == b == 1, 5% of papers\n",
+    "beta_distributions_frequencies = [(m.floor((5*papers_number)/100), (1, 1))]\n",
+    "# CASE 2: a == b > 1, 30% of papers\n",
+    "a = randint(2, 10)\n",
+    "b = a\n",
+    "beta_distributions_frequencies.append((m.floor((30*papers_number)/100), (a, b)))\n",
+    "# CASE 3: 0 < (a ^ b) < 1, 30% of papers\n",
+    "a = rn.uniform(0.001, 1)\n",
+    "b = rn.uniform(0.001, 1)\n",
+    "beta_distributions_frequencies.append((m.floor((20*papers_number)/100), (a, b)))\n",
+    "# CASE 4: (a V b) == 1, (a > b V b > a), 20% of papers\n",
+    "a = 1\n",
+    "b = randint(1, 10)\n",
+    "if rn.randint(0,1) > 0.5:\n",
+    "    a, b = b, a\n",
+    "beta_distributions_frequencies.append((m.floor((30*papers_number)/100), (a, b)))\n",
+    "# CASE 5: (a ^ b) > 1, (a > b V b > a), 15% of papers\n",
+    "a = randint(2, 10)\n",
+    "b = randint(2 + a, 10 + a)\n",
+    "if rn.randint(0,1) > 0.5:\n",
+    "    a, b = b, a\n",
+    "beta_distributions_frequencies.append((m.floor((15*papers_number)/100), (a, b)))\n",
+    "\n",
+    "papers_set = set(papers)\n",
+    "paper_distributions = [None] * papers_number\n",
+    "\n",
+    "generated_papers_distributions = 0\n",
+    "for (papers_amount, (a, b)) in beta_distributions_frequencies:\n",
+    "    current_paper_set = rn.sample(papers_set, papers_amount)\n",
+    "    for paper in current_paper_set:\n",
+    "        percentage = 100*generated_papers_distributions/papers_number\n",
+    "        if percentage % 10 == 0:\n",
+    "            print(f\"{int(generated_papers_distributions)}/{papers_number} ({int(percentage)}/100%)\")\n",
+    "        paper_distributions[paper] = beta(a=a, b=b)\n",
+    "        generated_papers_distributions = generated_papers_distributions + 1\n",
+    "        papers_set.remove(paper)\n",
     "print(f\"{papers_number}/{papers_number} (100/100%)\")\n",
-    "    \n",
+    "\n",
     "print(\"---------- PAPER DISTRIBUTIONS GENERATION COMPLETED ----------\")\n"
    ],
    "metadata": {
@@ -132,50 +161,84 @@
     "\n",
     "# N sets of readers, each one has X% of the total\n",
     "\n",
+    "readers_percent = 20\n",
     "reader_sets_number = m.floor(100 / readers_percent)\n",
     "readers_amount = m.floor((readers_number*readers_percent)/100)\n",
     "\n",
-    "readers_set = set(readers)\n",
     "readers_sets = []\n",
+    "\n",
+    "# Readers rate papers with a certain frequence\n",
+    "\n",
+    "paper_frequencies = [2, 4, 8, 30, 90]\n",
     "\n",
     "print(\"---------- READERS SETS GENERATION STARTED ----------\")\n",
     "\n",
     "ratings_number = sum(paper_frequencies) * readers_amount\n",
+    "\n",
     "for x in range(0, reader_sets_number):\n",
-    "    current_readers_set = rn.sample(readers_set, readers_amount)\n",
-    "    # Removing last index\n",
-    "    if readers_number in current_readers_set: current_readers_set.remove(readers_number)\n",
+    "    current_readers_set = np.random.choice(readers, readers_amount, False) \n",
+    "    readers = np.setdiff1d(readers, current_readers_set)\n",
     "    readers_sets.append(current_readers_set)\n",
-    "    for reader in current_readers_set:\n",
-    "        readers_set.remove(reader)\n",
     "    print(f\"SET {x}: \", current_readers_set)\n",
-    "     \n",
+    "\n",
     "print(\"---------- READERS SETS GENERATION COMPLETED ----------\")\n",
     "\n",
     "print(\"---------- RATINGS GENERATION STARTED ----------\")\n",
     "\n",
     "generated_ratings = 0\n",
+    "rated_papers = []\n",
     "with open(ratings_file_path, mode='w', newline='') as ratings_file:\n",
     "    ratings_writer = csv.writer(ratings_file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
     "    ratings_writer.writerow(['Timestamp', 'Reader', 'Paper', 'Score'])\n",
     "    for current_set in range(0, reader_sets_number):\n",
-    "        paper_per_reader = paper_frequencies[current_set]\n",
+    "        frequency = paper_frequencies[current_set]\n",
     "        readers_set = readers_sets[current_set]\n",
     "        for reader in readers_set:\n",
-    "            for index, paper in enumerate(rn.sample(set(papers), paper_per_reader)):\n",
+    "            sample = np.random.choice(papers, frequency, False)     \n",
+    "            for paper in sample:    \n",
     "                paper_distribution = paper_distributions[paper]\n",
     "                percentage = 100*generated_ratings/ratings_number\n",
     "                if percentage % 10 == 0:\n",
     "                    print(f\"{int(generated_ratings)}/{ratings_number} ({int(percentage)}/100%)\")\n",
-    "                current_tuple = {\n",
-    "                    \"Reader\": reader, \n",
-    "                    \"Paper\": paper, \n",
-    "                    \"Score\": round(paper_distribution, 2), \n",
-    "                }\n",
-    "                ratings_writer.writerow([generated_ratings, current_tuple[\"Reader\"], current_tuple[\"Paper\"], current_tuple[\"Score\"]])\n",
+    "                generated_rating = round(paper_distribution.rvs(1)[0], 2)\n",
+    "                if generated_rating == 0:\n",
+    "                    generated_rating = 0.01\n",
+    "                ratings_writer.writerow([\n",
+    "                    generated_ratings, \n",
+    "                    reader, \n",
+    "                    paper, \n",
+    "                    generated_rating\n",
+    "                ])\n",
+    "                rated_papers.append(paper)\n",
     "                generated_ratings+=1\n",
+    "    \n",
+    "    # Filling gaps\n",
+    "    readers = np.arange(readers_number)\n",
+    "    unrated_papers = set(papers) - set(rated_papers)    \n",
+    "    for paper in unrated_papers:\n",
+    "        for reader in np.random.choice(readers, 5, False):\n",
+    "            paper_distribution = paper_distributions[paper]\n",
+    "            generated_rating = round(paper_distribution.rvs(1)[0], 2)\n",
+    "            if generated_rating == 0:\n",
+    "                generated_rating = 0.01\n",
+    "                ratings_writer.writerow([\n",
+    "                    generated_ratings, \n",
+    "                    reader, \n",
+    "                    paper,\n",
+    "                    generated_rating\n",
+    "                ])\n",
+    "                generated_ratings+=1\n",
+    "        \n",
     "    print(f\"{ratings_number}/{ratings_number} (100/100%)\")\n",
+    "    \n",
     "ratings_file.close()\n",
+    "\n",
+    "paper_ratings = pd.read_csv(ratings_file_path)\n",
+    "paper_ratings = paper_ratings.sample(frac=1)\n",
+    "paper_ratings[\"Timestamp\"] = range(len(paper_ratings))\n",
+    "paper_ratings.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "paper_ratings.to_csv(ratings_file_path, index=False, header=True, sep=\",\")\n",
     "\n",
     "print(\"---------- RATINGS GENERATION ENDED ----------\")\n"
    ],
@@ -264,7 +327,7 @@
     "    }, ignore_index=True)\n",
     "info_dataframe.to_csv(info_file_path, index=False)\n",
     "\n",
-    "print(\"---------- INFO GENERATION ENDED ----------\")\n"
+    "print(\"---------- INFO GENERATION ENDED ----------\")"
    ],
    "metadata": {
     "pycharm": {
@@ -296,6 +359,7 @@
     }
    ],
    "source": [
+    "\n",
     "# Stats file generation\n",
     "\n",
     "print(\"---------- STATS GENERATION STARTED ----------\")\n",
