Experiment 1-c updated. Not working, yet.

--- a/notebooks/Experiments.ipynb
+++ b/notebooks/Experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -16,7 +16,7 @@
     "import statistics\n",
     "from matplotlib import pyplot as plt\n",
     "import seaborn as sns\n",
-    "from Readersourcing import Readersourcing\n",
+    "from ReadersourcingToolkit import ReadersourcingToolkit\n",
     "import numpy as np\n",
     "from scipy.stats.stats import pearsonr\n",
     "from scipy.stats.stats import kendalltau\n",
@@ -39,7 +39,7 @@
     "# Reader 3 vota sempre sugli estremi.\n",
     "# L'ordinamento desiderato degli score è Reader 1 -> Reader 2 -> Reader 3 (ordine crescente)\n",
     "\n",
-    "seed = Readersourcing(\n",
+    "seed = ReadersourcingToolkit(\n",
     "    dataset_name=\"seed_shuffle_1_special\", \n",
     "    dataset_folder_path=\"../data/{}/\", \n",
     "    data_shuffled=True, \n",
@@ -151,7 +151,7 @@
     "# Analizzo le quantità calcolate da Readersourcing per X shuffle dei rating di un dato seed.\n",
     "# Per ciascuna quantità viene costruito un grafico che mostra i valori della quantità corrente per ciascuno shuffle.\n",
     "\n",
-    "seed_shuffle_1 = Readersourcing(\n",
+    "seed_shuffle_1 = ReadersourcingToolkit(\n",
     "    dataset_name=\"seed_shuffle_1\", \n",
     "    dataset_folder_path=\"../data/{}/\", \n",
     "    data_shuffled=True, \n",
@@ -317,30 +317,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "text": [
-      "0/0 (100/100%)\n0/0 (100/100%)\n"
+      "0/0 (100/100%)\n",
+      "0/0 (100/100%)\n",
+      "0/0 (100/100%)\n",
+      "0/0 (100/100%)\n"
      ],
      "output_type": "stream"
     },
     {
-     "data": {
-      "text/plain": "   Rho (Arithmetic Mean)  Rho (Geometric Mean)  Rho (Bayesian Mean)  \\\n0                    1.0                   1.0                 -1.0   \n\n   Rho (Median)  Tau (Arithmetic Mean)  Tau (Geometric Mean)  \\\n0           1.0                    1.0                   1.0   \n\n   Tau (Bayesian Mean)  Tau (Median)  \n0                 -1.0           1.0  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Rho (Arithmetic Mean)</th>\n      <th>Rho (Geometric Mean)</th>\n      <th>Rho (Bayesian Mean)</th>\n      <th>Rho (Median)</th>\n      <th>Tau (Arithmetic Mean)</th>\n      <th>Tau (Geometric Mean)</th>\n      <th>Tau (Bayesian Mean)</th>\n      <th>Tau (Median)</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>-1.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>-1.0</td>\n      <td>1.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "text": [
+      "C:\\Ambienti\\Anaconda3\\lib\\site-packages\\scipy\\stats\\stats.py:3399: PearsonRConstantInputWarning: An input array is constant; the correlation coefficent is not defined.\n  warnings.warn(PearsonRConstantInputWarning())\n"
+     ],
+     "output_type": "stream"
     },
     {
-     "data": {
-      "text/plain": "   Rho (Arithmetic Mean)  Rho (Geometric Mean)  Rho (Bayesian Mean)  \\\n0              -0.241703              0.012493            -0.241703   \n\n   Rho (Median)  Tau (Arithmetic Mean)  Tau (Geometric Mean)  \\\n0     -0.241703              -0.333333             -0.333333   \n\n   Tau (Bayesian Mean)  Tau (Median)  \n0            -0.333333     -0.333333  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Rho (Arithmetic Mean)</th>\n      <th>Rho (Geometric Mean)</th>\n      <th>Rho (Bayesian Mean)</th>\n      <th>Rho (Median)</th>\n      <th>Tau (Arithmetic Mean)</th>\n      <th>Tau (Geometric Mean)</th>\n      <th>Tau (Bayesian Mean)</th>\n      <th>Tau (Median)</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0</td>\n      <td>-0.241703</td>\n      <td>0.012493</td>\n      <td>-0.241703</td>\n      <td>-0.241703</td>\n      <td>-0.333333</td>\n      <td>-0.333333</td>\n      <td>-0.333333</td>\n      <td>-0.333333</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-b2d4938faaad>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     78\u001b[0m \u001b[0mreader_steadiness_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mseed\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbuild_quantity_df\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Reader Steadiness\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     79\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 80\u001b[1;33m \u001b[0mcorr_df_1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcompute_means\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mratings_df\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpaper_score_df\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Paper Score\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     81\u001b[0m \u001b[0mcorr_df_2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcompute_means\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mratings_df\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpaper_score_df\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Paper Steadiness\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     82\u001b[0m \u001b[0mcorr_df_3\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcompute_means\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mratings_df\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreader_score_df\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Reader Score\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-5-b2d4938faaad>\u001b[0m in \u001b[0;36mcompute_means\u001b[1;34m(raw_df, quantity_df, quantity_label, axis)\u001b[0m\n\u001b[0;32m     63\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mcol\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     64\u001b[0m         \u001b[0mmean_column\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmean_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcol\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 65\u001b[1;33m         \u001b[0mpearson_corr_val\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpearsonr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mquantity_column\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmean_column\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     66\u001b[0m         \u001b[0mkendall_corr_val\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mkendalltau\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mquantity_column\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmean_column\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     67\u001b[0m         \u001b[0mdict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34mf'Rho ({col})'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpearson_corr_val\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Ambienti\\Anaconda3\\lib\\site-packages\\scipy\\stats\\stats.py\u001b[0m in \u001b[0;36mpearsonr\u001b[1;34m(x, y)\u001b[0m\n\u001b[0;32m   3420\u001b[0m     \u001b[1;31m# [-5e210, 5e210, 3e200, -3e200]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3421\u001b[0m     \u001b[0mnormxm\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlinalg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mxm\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3422\u001b[1;33m     \u001b[0mnormym\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlinalg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mym\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3423\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3424\u001b[0m     \u001b[0mthreshold\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1e-13\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Ambienti\\Anaconda3\\lib\\site-packages\\scipy\\linalg\\misc.py\u001b[0m in \u001b[0;36mnorm\u001b[1;34m(a, ord, axis, keepdims)\u001b[0m\n\u001b[0;32m    135\u001b[0m     \"\"\"\n\u001b[0;32m    136\u001b[0m     \u001b[1;31m# Differs from numpy only in non-finite handling and the use of blas.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 137\u001b[1;33m     \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0masarray_chkfinite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    138\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    139\u001b[0m     \u001b[1;31m# Only use optimized norms if axis and keepdims are not specified.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Ambienti\\Anaconda3\\lib\\site-packages\\numpy\\lib\\function_base.py\u001b[0m in \u001b[0;36masarray_chkfinite\u001b[1;34m(a, dtype, order)\u001b[0m\n\u001b[0;32m    496\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchar\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtypecodes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'AllFloat'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misfinite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    497\u001b[0m         raise ValueError(\n\u001b[1;32m--> 498\u001b[1;33m             \"array must not contain infs or NaNs\")\n\u001b[0m\u001b[0;32m    499\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    500\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: array must not contain infs or NaNs"
+     ],
+     "ename": "ValueError",
+     "evalue": "array must not contain infs or NaNs",
+     "output_type": "error"
     }
    ],
    "source": [
@@ -351,8 +360,8 @@
     "# Le quantità calcolate da Readersourcing vengono comparate con la loro media aritmetica, geometrica, bayesiana e con la mediana.\n",
     "# Gli indici standard vengono calcolati sui giudizi ricevuti da ciascun Paper e sui giudizi assegnati da ciascun Reader.\n",
     "\n",
-    "seed = Readersourcing(\n",
-    "    dataset_name=\"ground_truth_2\", \n",
+    "seed = ReadersourcingToolkit(\n",
+    "    dataset_name=\"seed_1/p_1_beta/\", \n",
     "    dataset_folder_path=\"../data/{}/\", \n",
     ")\n",
     "\n",
@@ -417,13 +426,21 @@
     "    return corr_df\n",
     "    \n",
     "ratings_df = seed.extract_ratings_df()\n",
-    "paper_score_df = seed.build_quantity_df(\"Paper Score\", 100)\n",
-    "reader_score_df = seed.build_quantity_df(\"Reader Score\", 100)\n",
-    "corr_df_1 = compute_means(ratings_df, paper_score_df, \"Paper Score\", 0)\n",
-    "corr_df_2 = compute_means(ratings_df, reader_score_df, \"Reader Score\", 1)\n",
     "\n",
-    "display(corr_df_1)\n",
-    "display(corr_df_2)"
+    "paper_score_df = seed.build_quantity_df(\"Paper Score\", 100)\n",
+    "paper_steadiness_df = seed.build_quantity_df(\"Paper Steadiness\", 100)\n",
+    "reader_score_df = seed.build_quantity_df(\"Reader Score\", 100)\n",
+    "reader_steadiness_df = seed.build_quantity_df(\"Reader Steadiness\", 100)\n",
+    "\n",
+    "corr_df_1 = compute_means(ratings_df, paper_score_df, \"Paper Score\", 0)\n",
+    "corr_df_2 = compute_means(ratings_df, paper_score_df, \"Paper Steadiness\", 0)\n",
+    "corr_df_3 = compute_means(ratings_df, reader_score_df, \"Reader Score\", 1)\n",
+    "corr_df_4 = compute_means(ratings_df, reader_steadiness_df, \"Reader Steadiness\", 1)\n",
+    "\n",
+    " # regplot paper score asse x media asse y\n",
+    " \n",
+    " \n",
+    " "
    ],
    "metadata": {
     "collapsed": false,
