--- a/notebooks/Readersourcing.ipynb
+++ b/notebooks/Readersourcing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -23,11 +23,11 @@
     "import os\n",
     "import json\n",
     "import time\n",
-    "from ReadersourcingParameters import ReadersourcingParameters\n",
+    "from ReadersourcingToolkit import ReadersourcingToolkit\n",
     "\n",
     "# Scroll to the bottom for the samples section\n",
     "\n",
-    "def readersourcing(parameters : ReadersourcingParameters):\n",
+    "def readersourcing(parameters : ReadersourcingToolkit):\n",
     "    \n",
     "    # Checking parameters for weird things\n",
     "    \n",
@@ -413,15 +413,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "text": [
-      "---------------------------------\n----------- SHUFFLE 0 -----------\n9/36 (25/100%)\n18/36 (50/100%)\n27/36 (75/100%)\n36/36 (100/100%)\n------------------------------\nPRINTING QUANTITIES TO .JSON FILE AT PATH ../models/seed_shuffle_1_small/readersourcing/shuffle/shuffle_0/quantities.json\nPRINTING RATING MATRIX TO .CSV FILE AT PATH ../models/seed_shuffle_1_small/readersourcing/shuffle/shuffle_0/ratings.csv\nPRINTING RATING GOODNESS MATRIX TO .CSV FILE AT PATH ../models/seed_shuffle_1_small/readersourcing/shuffle/shuffle_0/goodness.csv\nPRINTING INFO TO .JSON FILE AT PATH ../models/seed_shuffle_1_small/readersourcing/shuffle/shuffle_0/info.json\n------------------------------\nELAPSED TIME:  0.1230003833770752\n---------------------------------\n----------- SHUFFLE 1 -----------\n9/36 (25/100%)\n18/36 (50/100%)\n27/36 (75/100%)\n36/36 (100/100%)\n------------------------------\nPRINTING QUANTITIES TO .JSON FILE AT PATH ../models/seed_shuffle_1_small/readersourcing/shuffle/shuffle_1/quantities.json\nPRINTING RATING MATRIX TO .CSV FILE AT PATH ../models/seed_shuffle_1_small/readersourcing/shuffle/shuffle_1/ratings.csv\n",
-      "PRINTING RATING GOODNESS MATRIX TO .CSV FILE AT PATH ../models/seed_shuffle_1_small/readersourcing/shuffle/shuffle_1/goodness.csv\nPRINTING INFO TO .JSON FILE AT PATH ../models/seed_shuffle_1_small/readersourcing/shuffle/shuffle_1/info.json\n------------------------------\nELAPSED TIME:  0.12301421165466309\n---------------------------------\n----------- SHUFFLE 2 -----------\n9/36 (25/100%)\n18/36 (50/100%)\n27/36 (75/100%)\n36/36 (100/100%)\n------------------------------\nPRINTING QUANTITIES TO .JSON FILE AT PATH ../models/seed_shuffle_1_small/readersourcing/shuffle/shuffle_2/quantities.json\nPRINTING RATING MATRIX TO .CSV FILE AT PATH ../models/seed_shuffle_1_small/readersourcing/shuffle/shuffle_2/ratings.csv\nPRINTING RATING GOODNESS MATRIX TO .CSV FILE AT PATH ../models/seed_shuffle_1_small/readersourcing/shuffle/shuffle_2/goodness.csv\nPRINTING INFO TO .JSON FILE AT PATH ../models/seed_shuffle_1_small/readersourcing/shuffle/shuffle_2/info.json\n------------------------------\nELAPSED TIME:  0.12000226974487305\n"
+      "3350/67000 (5/100%)\n",
+      "6700/67000 (10/100%)\n"
      ],
      "output_type": "stream"
+    },
+    {
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-6e1ec1a18728>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     40\u001b[0m )\n\u001b[0;32m     41\u001b[0m \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 42\u001b[1;33m    \u001b[0mreadersourcing\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mseed\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     43\u001b[0m \u001b[1;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0merror\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     44\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrepr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0merror\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-3-9c09a82e6f05>\u001b[0m in \u001b[0;36mreadersourcing\u001b[1;34m(parameters)\u001b[0m\n\u001b[0;32m    340\u001b[0m         \u001b[0mprevious_ratings\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprevious_ratings\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    341\u001b[0m         previous_ratings = previous_ratings[\n\u001b[1;32m--> 342\u001b[1;33m              \u001b[1;33m(\u001b[0m\u001b[0mprevious_ratings\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m!=\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreader\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    343\u001b[0m              \u001b[1;33m(\u001b[0m\u001b[0mprevious_ratings\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m==\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpaper\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    344\u001b[0m         ]            \n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ],
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error"
     }
    ],
    "source": [
@@ -431,12 +443,12 @@
     "# ---------- SAMPLE 1 ----------\n",
     "# ------------------------------\n",
     "\n",
-    "# ground_truth_2 = ReadersourcingParameters(\n",
-    "#      dataset_name=\"ground_truth_2\", \n",
-    "#      dataset_folder_path=\"../data/{}/\",\n",
+    "# seed = ReadersourcingToolkit(\n",
+    "#    dataset_name=\"ground_truth_2\", \n",
+    "#    dataset_folder_path=\"../data/{}/\",\n",
     "# )\n",
     "# try:\n",
-    "#    readersourcing(ground_truth_2)\n",
+    "#    readersourcing(seed)\n",
     "# except ValueError as error:\n",
     "#      print(repr(error))\n",
     "\n",
@@ -444,7 +456,7 @@
     "# ---------- SAMPLE 2 ----------\n",
     "# ------------------------------\n",
     "\n",
-    "# seed_p_1_beta = ReadersourcingParameters(\n",
+    "# seed = ReadersourcingToolkit(\n",
     "#     dataset_name=\"seed_1/p_1_beta\", \n",
     "#     dataset_folder_path=\"../data/{}/\", \n",
     "#     days_serialization=True,\n",
@@ -453,16 +465,29 @@
     "# )\n",
     "#    \n",
     "# try:\n",
-    "#    readersourcing(seed_p_1_beta)\n",
+    "#    readersourcing(seed)\n",
     "# except ValueError as error:\n",
     "#     print(repr(error))\n",
+    "\n",
+    "# ------------------------------\n",
+    "# ---------- SAMPLE 3 ----------\n",
+    "# ------------------------------\n",
+    "\n",
+    "seed = ReadersourcingToolkit(\n",
+    "    dataset_name=\"seed_1/p_1_beta\", \n",
+    "    dataset_folder_path=\"../data/{}/\", \n",
+    ")\n",
+    "try:\n",
+    "   readersourcing(seed)\n",
+    "except ValueError as error:\n",
+    "    print(repr(error))\n",
     " \n",
     "# ------------------------------\n",
     "# ---------- SAMPLE 3 ----------\n",
     "# ------------------------------\n",
     "\n",
-    "# seed_shuffle_1 = ReadersourcingParameters(\n",
-    "#      dataset_name=\"seed_shuffle_1\", \n",
+    "# seed = ReadersourcingToolkit(\n",
+    "#      dataset_name=\"seed\", \n",
     "#      dataset_folder_path=\"../data/{}/\", \n",
     "#      data_shuffled=True, \n",
     "#      current_shuffle = 0,\n",
@@ -470,11 +495,11 @@
     "#  )\n",
     "#  \n",
     "# try:\n",
-    "#     for index_shuffle in range(seed_shuffle_1.shuffle_amount):\n",
+    "#     for index_shuffle in range(seed.shuffle_amount):\n",
     "#         print(\"---------------------------------\")\n",
     "#         print(\"----------- SHUFFLE {} -----------\".format(index_shuffle))\n",
-    "#         seed_shuffle_1.current_shuffle = index_shuffle\n",
-    "#         readersourcing(seed_shuffle_1)\n",
+    "#         seed.current_shuffle = index_shuffle\n",
+    "#         readersourcing(seed)\n",
     "# except ValueError as error:\n",
     "#     print(repr(error))\n",
     "\n",
@@ -482,7 +507,7 @@
     "# ---------- SAMPLE 4 ----------\n",
     "# ------------------------------\n",
     "\n",
-    "# seed_shuffle_1_special = ReadersourcingParameters(\n",
+    "# seed = ReadersourcingToolkit(\n",
     "#      dataset_name=\"seed_shuffle_1_special\", \n",
     "#      dataset_folder_path=\"../data/{}/\", \n",
     "#      data_shuffled=True, \n",
@@ -491,31 +516,13 @@
     "# )\n",
     "#  \n",
     "# try:\n",
-    "#     for index_shuffle in range(seed_shuffle_1_special.shuffle_amount):\n",
+    "#     for index_shuffle in range(seed.shuffle_amount):\n",
     "#         print(\"---------------------------------\")\n",
     "#         print(\"----------- SHUFFLE {} -----------\".format(index_shuffle))\n",
-    "#         seed_shuffle_1_special.current_shuffle = index_shuffle\n",
-    "#         readersourcing(seed_shuffle_1_special)\n",
+    "#         seed.current_shuffle = index_shuffle\n",
+    "#         readersourcing(seed)\n",
     "# except ValueError as error:\n",
-    "#     print(repr(error))\n",
-    "\n",
-    "\n",
-    "seed_shuffle_1_special = ReadersourcingParameters(\n",
-    "     dataset_name=\"seed_shuffle_1_special\", \n",
-    "     dataset_folder_path=\"../data/{}/\", \n",
-    "     data_shuffled=True, \n",
-    "     current_shuffle = 0,\n",
-    "     shuffle_amount=100\n",
-    ")\n",
-    " \n",
-    "try:\n",
-    "    for index_shuffle in range(seed_shuffle_1_special.shuffle_amount):\n",
-    "        print(\"---------------------------------\")\n",
-    "        print(\"----------- SHUFFLE {} -----------\".format(index_shuffle))\n",
-    "        seed_shuffle_1_special.current_shuffle = index_shuffle\n",
-    "        readersourcing(seed_shuffle_1_special)\n",
-    "except ValueError as error:\n",
-    "     print(repr(error))"
+    "#      print(repr(error))"
    ],
    "metadata": {
     "collapsed": false,
