Readers distribution generation through power law completed.

--- a/notebooks/Readersourcing.ipynb
+++ b/notebooks/Readersourcing.ipynb
@@ -473,14 +473,14 @@
     "# ---------- SAMPLE 3 ----------\n",
     "# ------------------------------\n",
     "\n",
-    "seed = ReadersourcingToolkit(\n",
-    "    dataset_name=\"seed_1/p_1_beta\", \n",
-    "    dataset_folder_path=\"../data/{}/\", \n",
-    ")\n",
-    "try:\n",
-    "   readersourcing(seed)\n",
-    "except ValueError as error:\n",
-    "    print(repr(error))\n",
+    "# seed = ReadersourcingToolkit(\n",
+    "#     dataset_name=\"seed_1/p_1_beta\", \n",
+    "#     dataset_folder_path=\"../data/{}/\", \n",
+    "# )\n",
+    "# try:\n",
+    "#    readersourcing(seed)\n",
+    "# except ValueError as error:\n",
+    "#     print(repr(error))\n",
     " \n",
     "# ------------------------------\n",
     "# ---------- SAMPLE 3 ----------\n",
@@ -522,7 +522,20 @@
     "#         seed.current_shuffle = index_shuffle\n",
     "#         readersourcing(seed)\n",
     "# except ValueError as error:\n",
-    "#      print(repr(error))"
+    "#      print(repr(error))\n",
+    "\n",
+    "# ------------------------------\n",
+    "# ---------- SAMPLE 5 ----------\n",
+    "# ------------------------------\n",
+    "\n",
+    "seed = ReadersourcingToolkit(\n",
+    "    dataset_name=\"seed_power_law_1\", \n",
+    "    dataset_folder_path=\"../data/{}/\", \n",
+    ")\n",
+    "try:\n",
+    "   readersourcing(seed)\n",
+    "except ValueError as error:\n",
+    "    print(repr(error))"
    ],
    "metadata": {
     "collapsed": false,
